# conduit_bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  results2.json  run_bench
.github/workflows/: cmake.yml
include/bench/: bench.hpp
src/: baseline.cpp  conduit-main.cpp  conduit.cpp  cppcoro.cpp
